force-app/main/default/objects/Shared_Document__c/Shared_Document__c.object-meta.xml
<CustomObject>
    <label>Shared Document</label>
    <nameField>
        <label>Shared Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shared Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>