force-app/main/default/objects/Shared_Document__c/fields/Allow_Download_in_Original_Format__c.field-meta.xml
<CustomField>
    <fullName>Allow_Download_in_Original_Format__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Download in Original Format</label>
    <type>Checkbox</type>
</CustomField>