force-app/main/default/objects/Shared_Document__c/fields/Content_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_ID__c</fullName>
    <label>Content Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>