force-app/main/default/objects/Shared_Document__c/fields/ContentVersion_ID__c.field-meta.xml
<CustomField>
    <fullName>ContentVersion_ID__c</fullName>
    <label>ContentVersion ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>