force-app/main/default/objects/Shared_Document__c/fields/Email_when_Preview_Images_are_Ready__c.field-meta.xml
<CustomField>
    <fullName>Email_when_Preview_Images_are_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email when Preview Images are Ready</label>
    <type>Checkbox</type>
</CustomField>