force-app/main/default/objects/Shared_Document__c/fields/File_Download_Link__c.field-meta.xml
<CustomField>
    <fullName>File_Download_Link__c</fullName>
    <label>File Download Link</label>
    <type>Url</type>
</CustomField>