force-app/main/default/objects/Shared_Document__c/fields/First_Viewed__c.field-meta.xml
<CustomField>
    <fullName>First_Viewed__c</fullName>
    <label>First Viewed</label>
    <type>DateTime</type>
</CustomField>