force-app/main/default/objects/Shared_Document__c/fields/Is_Approval_Blocked__c.field-meta.xml
<CustomField>
    <fullName>Is_Approval_Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approval Blocked</label>
    <type>Checkbox</type>
</CustomField>