force-app/main/default/objects/Shared_Document__c/fields/Is_Completion_Email_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Completion_Email_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Completion Email Required</label>
    <type>Checkbox</type>
</CustomField>