force-app/main/default/objects/Shared_Document__c/fields/Is_Newest_Version__c.field-meta.xml
<CustomField>
    <fullName>Is_Newest_Version__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Newest Version</label>
    <type>Checkbox</type>
</CustomField>