force-app/main/default/objects/Shared_Document__c/fields/Journal__c.field-meta.xml
<CustomField>
    <fullName>Journal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journal</label>
    <referenceTo>Journal__c</referenceTo>
    <relationshipLabel>Shared Documents</relationshipLabel>
    <relationshipName>Shared_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>