force-app/main/default/objects/Shared_Document__c/fields/Number_of_Registrations_Completed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Registrations_Completed__c</fullName>
    <label>Number of Registrations Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>