force-app/main/default/objects/Shared_Document__c/fields/Number_of_Registrations_Required__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Registrations_Required__c</fullName>
    <label>Number of Registrations Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>