force-app/main/default/objects/Shared_Document__c/fields/OTP_Code__c.field-meta.xml
<CustomField>
    <fullName>OTP_Code__c</fullName>
    <label>OTP Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>