force-app/main/default/objects/Shared_Document__c/fields/OTP_Expires__c.field-meta.xml
<CustomField>
    <fullName>OTP_Expires__c</fullName>
    <label>OTP Expires</label>
    <type>DateTime</type>
</CustomField>