force-app/main/default/objects/Shared_Document__c/fields/Public_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Public_Registration_Status__c</fullName>
    <label>Public Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Ready for Public Registration</fullName>
            </value>
            <value>
                <fullName>Public Registration Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>