force-app/main/default/objects/Shared_Document__c/fields/Public_Registrations_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Public_Registrations_Purchased__c</fullName>
    <formula>Public_Registration_Product__r.Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Public Registrations Purchased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>