force-app/main/default/objects/Shared_Document__c/fields/Require_Password_to_Access_Content__c.field-meta.xml
<CustomField>
    <fullName>Require_Password_to_Access_Content__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Password to Access Content</label>
    <type>Checkbox</type>
</CustomField>