force-app/main/default/objects/Shared_Document__c/fields/Was_Approved__c.field-meta.xml
<CustomField>
    <fullName>Was_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is checked whenever Status is set to &quot;Approved&quot;. It will not be unchecked again. This is to track if a document was ever Approved, even if it changes status to e.g. &quot;Superseded&quot; later on.</inlineHelpText>
    <label>Was Approved</label>
    <type>Checkbox</type>
</CustomField>