force-app/main/default/objects/Shared_Document__c/validationRules/Public_Reg_Prod_Must_Be_A_Pub_Reg_Prod.validationRule-meta.xml
<ValidationRule>
    <fullName>Public_Reg_Prod_Must_Be_A_Pub_Reg_Prod</fullName>
    <active>false</active>
    <description>If Public_Registration_Product__c is populated, the selected record must have Is_Public_Registration_Product__c = TRUE.</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Public_Registration_Product__c)),
NOT(Public_Registration_Product__r.Is_Public_Registration_Product__c)
)</errorConditionFormula>
    <errorDisplayField>Public_Registration_Product__c</errorDisplayField>
    <errorMessage>Selected product isn’t marked as a Public Registration Product. Choose a product where “Is Public Registration Product” is true.</errorMessage>
</ValidationRule>