force-app/main/default/objects/Shared_Document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>External_ID__c</columns>
    <columns>Journal__c</columns>
    <columns>Market_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>