force-app/main/default/objects/Shared_Document__c/listViews/Approved_Documents.listView-meta.xml
<ListView>
    <fullName>Approved_Documents</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Journal__c</columns>
    <columns>Market_Unit__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Approval_Timestamp__c</columns>
    <columns>Last_Viewed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Documents</label>
</ListView>