force-app/main/default/objects/Shared_Document__c/listViews/Shared_Documents_Related_to_Journals.listView-meta.xml
<ListView>
    <fullName>Shared_Documents_Related_to_Journals</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Journal__c</columns>
    <columns>Status__c</columns>
    <columns>Version__c</columns>
    <columns>Is_Newest_Version__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Journal__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Shared Documents Related to Journals</label>
</ListView>